# java-coding-challenge

./: .editorconfig  .gitignore  README.md
async-data-fetcher/: .#HELP.md  Dockerfile  Dockerfile.alpine2  Justfile  README.md  all_relevant_java_code.java  index.html  justfile  pom.xml  pom.xml.backup  run.sh
async-data-fetcher/helpers/: generate-javadoc-stubs.el
async-data-fetcher/perf-tests/: results.jtl  results_java.jtl  script.jmx  script.js
async-data-fetcher/perf-tests/report/: index.html  statistics.json
async-data-fetcher/perf-tests/report/content/js/: dashboard.js  graph.js
async-data-fetcher/perf-tests/report/content/pages/: CustomsGraphs.html  OverTime.html  ResponseTimes.html  Throughput.html
async-data-fetcher/perf-tests/report_java/: index.html  statistics.json
async-data-fetcher/perf-tests/report_java/content/js/: dashboard.js  graph.js
async-data-fetcher/src/main/resources/: application.properties
helpers/: generate-javadoc-stubs.el  git-timetracking-tool.bash  info_dump.bash  initialize-java-springboot-project.bash  project-info.bash
notes/: personal_notes.org  resources.org
prototype_bash/: fetch-merge-serve.bash  oneliner.bash  test_suite.bash
round2/: Justfile  build.gradle  init-spring.bash  pom.xml  readme.org  settings.gradle
round2/notes/: interview_process.org  notes.org
round2/src/main/resources/: application.properties
rust-wasm-coding-challenge/: Cargo.toml  Justfile  readme.html  readme.md  readme.org  wrangler.toml  wrangler.toml.example
rust-wasm-coding-challenge/src/: lib.rs  lib.rs.backup
(+35 files in other folders)
