[package]
name = "cf_worker_wasm_microservice"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
worker = "0.5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.5"
caches = "0.3.0"

[dependencies.web-sys]
version = "0.3.77"
features = [
"Request",
"Response",
"Headers"
]
